Revert "Change polyfill to use babel preset-env"
This reverts commit e44ad02c956534c06769e72e9b54fe854fd0c538.

--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,4 @@
 {
-  "plugins": [
-    "@babel/plugin-proposal-object-rest-spread"
-  ],
-  "presets": [
-    "@babel/preset-react",
-    [
-      "@babel/preset-env",
-      {
-        "useBuiltIns": "usage"
-      }
-    ]
-  ]
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"],
+  "presets": ["@babel/preset-react"]
 }
