--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
   "plugins": ["@babel/plugin-proposal-object-rest-spread"],
-  "presets": ["@babel/preset-react"]
+  "presets": [
+    "@babel/preset-react",
+    [
+      "@babel/preset-env",
+      { "useBuiltIns": "usage" }
+    ]
+  ]
 }
